Starts creating a list for store specific coupons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         <activity
             android:name=".StoreInfo"
             android:label="@string/title_activity_store_info"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".StoreActivity"
+            android:label="@string/title_activity_store"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
